--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,10 @@ body {
 }
 
 main {
-    margin: 15px 15px 90px;
     padding: 15px;
+    max-width: 960px;
+    margin: 15px auto auto;
+    margin-top: 15px;
 
 }
 
@@ -21,6 +23,7 @@ footer {
     padding: 7px;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
+    margin-top: 30px;
 }
 
 .btn-submit {
@@ -30,6 +33,8 @@ footer {
 
 .nav-container {
     padding: 0;
+    max-width: 960px;
+    margin: auto;
 }
 
 .a-nav {
@@ -91,3 +96,54 @@ footer {
 .no-flex {
     display: block;
 }
+
+.link-img1 {
+    min-width: 250px;
+}
+
+
+@media screen and (max-width: 980px) {
+    body {
+        margin: 15px;
+        padding-bottom: 60px;
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        position: relative;
+    }
+    body {
+        margin: 15px;
+        padding-bottom: 60px;
+
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .nav-links {
+        margin: auto;
+        max-width: 350px;
+    }
+    
+    ul {
+        margin-top: 10px;
+        
+        align-content: center;
+    }
+
+    li {
+        justify-self: center;
+    }
+
+    main{
+        margin: 15px 0px 15px;
+    }
+
+    body{
+        margin: 15px;
+        padding-bottom: 45px;
+    }
+}    
+
